--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context=".MainActivity">
+    tools:context=".Register">
 
     <TextView
         android:layout_width="wrap_content"
@@ -11,16 +11,18 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="103dp"
-        android:layout_marginEnd="90dp"
-        android:text="Se connecter"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="94dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="586dp"
+        android:text="S'inscrire"
         android:textColor="#7f00ff"
         android:textSize="100px" />
 
     <EditText
-        android:id="@+id/user1"
-        android:layout_width="332dp"
+        android:id="@+id/user2"
+        android:layout_width="318dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
@@ -36,8 +38,8 @@
         android:textCursorDrawable="@null" />
 
     <EditText
-        android:id="@+id/pass1"
-        android:layout_width="331dp"
+        android:id="@+id/pass2"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
@@ -53,7 +55,7 @@
         android:textCursorDrawable="@null" />
 
     <ImageView
-        android:id="@+id/toggle_view1"
+        android:id="@+id/toggle_view2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="330dp"
@@ -61,40 +63,71 @@
         android:scaleType="centerCrop"
         android:clickable="true" />
 
-    <Button
-        android:id="@+id/login"
-        android:layout_width="263dp"
+    <EditText
+        android:id="@+id/email2"
+        android:layout_width="328dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/pass1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="126dp"
-        android:layout_marginEnd="70dp"
+        android:layout_marginTop="390dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
+        android:drawablePadding="5dp"
+        android:gravity="start"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:textCursorDrawable="@null" />
+
+    <EditText
+        android:id="@+id/editTextPhone"
+        android:layout_width="330dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="228dp"
+        android:ems="10"
+        android:hint="Numéro de téléphone"
+        android:inputType="phone" />
+
+    <Button
+        android:id="@+id/register"
+        android:layout_width="259dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="77dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="565dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="105dp"
         android:gravity="center"
-        android:text="SE CONNECTER"
+        android:text="Je m'inscris"
         android:textAllCaps="false"
         android:textColor="#FFF"
         android:textSize="20dp" />
 
-    <TextView
-        android:id="@+id/register1"
-        android:layout_width="wrap_content"
-        android:layout_height="23dp"
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="327dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="90dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="600dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginBottom="149dp"
-        android:focusable="true"
-        android:fontFamily="sans-serif"
-        android:text="Vous n'avez pas de compte ? Créé-le"
-        android:textColor="#7f00ff"
-        android:textSize="12dp" />
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="186dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="500dp"
+        android:ems="10"
+        android:hint="Nom"
+        android:inputType="textPersonName" />
 
 </RelativeLayout>
