--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -19,7 +19,8 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="Modifier mon profil"/>
 
 
     <ScrollView
@@ -62,6 +63,7 @@
                 android:layout_marginTop="14dp"
                 android:textColorHint="#808080"
                 app:layout_constraintTop_toBottomOf="@+id/layout_image"
+                android:contentDescription="Modifiez votre image de profil"
                 >
 
                 <EditText
@@ -74,7 +76,8 @@
                     android:padding="30dp"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:contentDescription="Modifiez votre nom"/>
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -100,7 +103,8 @@
                     android:padding="10dp"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:contentDescription="Modifiez votre login"/>
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -128,6 +132,7 @@
                     android:background="#00000000"
                     android:textSize="15sp"
                     android:inputType="textEmailAddress"
+                    android:contentDescription="Modifiez votre email"
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -155,7 +160,8 @@
                     android:padding="10dp"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:contentDescription="Modifiez votre numéro de téléphone"/>
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -182,7 +188,8 @@
                     android:padding="10dp"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:contentDescription="Modifiez votre mot de passe"/>
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -202,7 +209,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layout_des"
-                app:layout_constraintWidth_percent="0.7" />
+                app:layout_constraintWidth_percent="0.7"
+                android:contentDescription="Enregistrement de vos modifications"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
