--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,11 +96,12 @@
         android:layout_marginTop="600dp"
         android:layout_marginEnd="90dp"
         android:layout_marginBottom="149dp"
+        android:contentDescription="Si vous n'avez pas de compte, appuyez sur ce lien pour en créer un"
         android:focusable="true"
         android:fontFamily="sans-serif"
+        android:onClick="goToRegister"
         android:text="Vous n'avez pas de compte ? Créez-le"
         android:textColor="#7f00ff"
-        android:textSize="12dp"
-        android:contentDescription="Si vous n'avez pas de compte, appuyez sur ce lien pour en créer un"/>
+        android:textSize="12dp" />
 
 </RelativeLayout>
