--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -17,8 +17,10 @@
         android:text="jamais vu"
         app:layout_constraintBottom_toTopOf="@+id/btMatch"
         app:layout_constraintEnd_toStartOf="@+id/btJaime"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toEndOf="@+id/btJaimePas"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -37,24 +39,25 @@
         android:id="@+id/btMessages"
         android:layout_width="116dp"
         android:layout_height="61dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="204dp"
         android:text="Messages"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btMatch"
         android:layout_width="108dp"
         android:layout_height="61dp"
-        android:layout_marginStart="63dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="204dp"
-        android:layout_marginEnd="63dp"
+        android:layout_marginEnd="35dp"
         android:text="Match"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button12"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toEndOf="@+id/btMessages"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="1.0" />
@@ -64,34 +67,37 @@
         android:layout_width="108dp"
         android:layout_height="61dp"
         android:layout_marginTop="204dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="16dp"
         android:text="Stats"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btJaimePas"
         android:layout_width="108dp"
         android:layout_height="61dp"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="38dp"
         android:layout_marginBottom="91dp"
         android:text="j'aime pas"
         app:layout_constraintBottom_toTopOf="@+id/btMessages"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btJaime"
         android:layout_width="108dp"
         android:layout_height="61dp"
         android:layout_marginTop="38dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="89dp"
         android:text="j'aime"
         app:layout_constraintBottom_toTopOf="@+id/button12"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
