--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:contentDescription="Se connecter à l'application Movinder"/>
 
     <EditText
-        android:id="@+id/user1"
+        android:id="@+id/userLogin"
         android:layout_width="332dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -31,15 +31,15 @@
         android:layout_marginTop="250dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
+        android:contentDescription="Saisissez votre identifiant Movinder"
         android:drawablePadding="5dp"
         android:gravity="start"
         android:hint="Login"
         android:inputType="text"
-        android:textCursorDrawable="@null"
-        android:contentDescription="Saisissez votre identifiant Movinder"/>
+        android:textCursorDrawable="@null" />
 
     <EditText
-        android:id="@+id/pass1"
+        android:id="@+id/userPassword"
         android:layout_width="331dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -49,12 +49,12 @@
         android:layout_marginTop="320dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
+        android:contentDescription="Saisissez votre mot de passe Movinder"
         android:drawablePadding="5dp"
         android:gravity="start"
         android:hint="Mot de passe"
         android:inputType="textPassword"
-        android:textCursorDrawable="@null"
-        android:contentDescription="Saisissez votre mot de passe Movinder"/>
+        android:textCursorDrawable="@null" />
 
     <ImageView
         android:id="@+id/toggle_view1"
@@ -69,7 +69,7 @@
         android:id="@+id/login"
         android:layout_width="263dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/pass1"
+        android:layout_below="@+id/userPassword"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="70dp"
@@ -77,12 +77,13 @@
         android:layout_marginTop="126dp"
         android:layout_marginEnd="70dp"
         android:layout_marginRight="40dp"
+        android:contentDescription="Se connecter à l'application Movinder"
         android:gravity="center"
+        android:onClick="tryToLog"
         android:text="SE CONNECTER"
         android:textAllCaps="false"
         android:textColor="#FFF"
-        android:textSize="20dp"
-        android:contentDescription="Se connecter à l'application Movinder"/>
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/register1"
