Add user + réponse des films + changement classe film

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,142 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     tools:context=".Register">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="94dp"
-        android:layout_marginEnd="120dp"
-        android:layout_marginBottom="586dp"
-        android:text="S'inscrire"
-        android:textAlignment="center"
-        android:textColor="#7f00ff"
-        android:textSize="100px"
-        android:contentDescription="S'inscrire sur l'application Movinder"/>
-
-    <EditText
-        android:id="@+id/editTextLogin"
-        android:layout_width="318dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
-        android:contentDescription="Créez votre identifiant de connexion"
-        android:drawablePadding="5dp"
-        android:gravity="start"
-        android:hint="Login"
-        android:inputType="text"
-        android:textCursorDrawable="@null" />
-
-    <EditText
-        android:id="@+id/editTextMdp"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="320dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
-        android:drawablePadding="5dp"
-        android:gravity="start"
-        android:hint="Mot de passe"
-        android:inputType="textPassword"
-        android:textCursorDrawable="@null"
-        android:contentDescription="Créez votre mot de passe de connexion"/>
-
-    <ImageView
-        android:id="@+id/toggle_view2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="330dp"
-        android:layout_marginStart="330dp"
-        android:scaleType="centerCrop"
-        android:clickable="true" />
-
-    <EditText
-        android:id="@+id/editTextEmail"
-        android:layout_width="328dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="390dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
-        android:drawablePadding="5dp"
-        android:gravity="start"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:textCursorDrawable="@null"
-        android:contentDescription="Renseignez votre adresse mail"/>
 
     <EditText
         android:id="@+id/editTextPhone"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="228dp"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="518dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="168dp"
+        android:contentDescription="Renseignez votre numéro de téléphone"
         android:ems="10"
         android:hint="Numéro de téléphone"
         android:inputType="phone"
-        android:contentDescription="Renseignez votre numéro de téléphone"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="129dp"
+        android:layout_marginTop="94dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="586dp"
+        android:contentDescription="S'inscrire sur l'application Movinder"
+        android:text="S'inscrire"
+        android:textAlignment="center"
+        android:textColor="#7f00ff"
+        android:textSize="100px"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextMail"
+        android:layout_width="318dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="248dp"
+        android:layout_marginEnd="53dp"
+        android:layout_marginBottom="438dp"
+        android:contentDescription="Créez votre identifiant de connexion"
+        android:drawablePadding="5dp"
+        android:gravity="start"
+        android:hint="Email"
+        android:inputType="text"
+        android:textCursorDrawable="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextMdp"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="312dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="374dp"
+        android:contentDescription="Créez votre mot de passe de connexion"
+        android:drawablePadding="5dp"
+        android:gravity="start"
+        android:hint="Mot de passe"
+        android:inputType="textPassword"
+        android:textCursorDrawable="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/toggle_view2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="330dp"
+        android:layout_marginTop="330dp"
+        android:clickable="true"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextSexe"
+        android:layout_width="328dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="380dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="306dp"
+        android:contentDescription="Renseignez votre adresse mail"
+        android:drawablePadding="5dp"
+        android:gravity="start"
+        android:hint="Sexe"
+        android:inputType="textEmailAddress"
+        android:textCursorDrawable="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/idTextOrientation"
+        android:layout_width="330dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginBottom="236dp"
+        android:contentDescription="Orientation"
+        android:ems="10"
+        android:hint="Orientation"
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/register"
         android:layout_width="259dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="77dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="565dp"
-        android:layout_marginEnd="75dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginBottom="105dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="612dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginBottom="69dp"
         android:contentDescription="Bouton pour valider son inscription"
         android:gravity="center"
         android:onClick="toRegister"
         android:text="Je m'inscris"
         android:textAllCaps="false"
         android:textColor="#FFF"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextNom"
         android:layout_width="327dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="42dp"
         android:layout_marginTop="186dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="41dp"
         android:layout_marginBottom="500dp"
         android:contentDescription="Renseignez votre nom"
         android:ems="10"
         android:hint="Nom"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
