Add like movie ou non

--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -81,6 +81,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="38dp"
         android:layout_marginBottom="91dp"
+        android:onClick="dontLikeMovie"
         android:text="j'aime pas"
         app:layout_constraintBottom_toTopOf="@+id/btMessages"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,6 +95,7 @@
         android:layout_marginTop="38dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="89dp"
+        android:onClick="likeMovie"
         android:text="j'aime"
         app:layout_constraintBottom_toTopOf="@+id/button12"
         app:layout_constraintEnd_toEndOf="parent"
